--- a/HSP/appsettings.Development.json
+++ b/HSP/appsettings.Development.json
@@ -1,7 +1,17 @@
 ﻿{
-  "Logging": {
+
+
+  "ConnectionStrings":
+  {
+
+    "DefaultConnection": ""
+
+  },
+  "Logging":
+  {
     "IncludeScopes": false,
-    "LogLevel": {
+    "LogLevel":
+    {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
